--- a/fdphd.bib
+++ b/fdphd.bib
@@ -694,6 +694,16 @@ Terahertz spectroscopy of ferroelectrics and related materials
   journal={arXiv preprint arXiv:1507.08901},
   year={2015}
 }
+@article{prosvirnin2015planar,
+  title={Planar all-silicon metamaterial for terahertz applications},
+  author={Prosvirnin, Sergey L and Dmitriev, Victor A and Kuleshov, Yeugenii M and Khardikov, Vyacheslav V},
+  journal={Applied Optics},
+  volume={54},
+  number={13},
+  pages={3986--3990},
+  year={2015},
+  publisher={Optical Society of America}
+}
 
 
  	 	YihangChen2009 Unusual bands of 1D PhC containing SNG
@@ -825,7 +835,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
 %  -- Homogenisation: misc --
  	 	Jelinek2010 Fishnet homogenization
 
-%% TODO understand what this is about
 @article{hasar2009new,
   title={A new microwave method based on transmission scattering parameter measurements for simultaneous broadband and stable permittivity and permeability determination},
   author={Hasar, Ugur Cem},
@@ -846,7 +855,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   pages={2204},
   year={2011}
 }
-% todo: read
 @article{sihvola2009metamaterials,
   title={Metamaterials: a personal view},
   author={Sihvola, Ari},
@@ -1083,7 +1091,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2007},
   publisher={APS}
 }
-@article{vynck2009,
+@article{vynck2009all,
   title={All-dielectric rod-type metamaterials at optical frequencies},
   author={Vynck, Kevin and Felbacq, Didier and Centeno, Emmanuel and C{\u{a}}buz, AI and Cassagne, David and Guizal, Brahim},
   journal={Phys. Rev. Lett.},
@@ -2299,6 +2307,61 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 }
 
 /*}}}*/
+
+% -- Other homogenisation approaches --
+@article{smith2006homogenization,
+  title={Homogenization of metamaterials by field averaging},
+  author={Smith, David R and Pendry, John B},
+  journal={JOSA B},
+  volume={23},
+  number={3},
+  pages={391--403},
+  year={2006},
+  publisher={Optical Society of America}
+}
+@article{sun2009effective,
+  title={Effective-medium properties of metamaterials: a quasimode theory},
+  author={Sun, Shulin and Chui, ST and Zhou, Lei},
+  journal={Physical Review E},
+  volume={79},
+  number={6},
+  pages={066604},
+  year={2009},
+  publisher={APS}
+}
+@article{zhang2006optical,
+  title={Optical negative-index bulk metamaterials consisting of 2D perforated metal-dielectric stacks},
+  author={Zhang, Shuang and Fan, Wenjun and Panoiu, NC and Malloy, KJ and Osgood, RM and Brueck, SR},
+  journal={Optics express},
+  volume={14},
+  number={15},
+  pages={6778--6787},
+  year={2006},
+  publisher={Optical Society of America}
+}
+@article{smigaj2008validity,
+  title={Validity of the effective-medium approximation of photonic crystals},
+  author={{\'S}migaj, Wojciech and Gralak, Boris},
+  journal={Physical Review B},
+  volume={77},
+  number={23},
+  pages={235445},
+  year={2008},
+  publisher={APS},
+  abstract={A definition of the effective permittivity and permeability is proposed for two-dimensional photonic crystals. Expression for these effective parameters is deduced from the combination of the dispersion law with the formula for the reflection coefficient of a semi-infinite photonic crystal in the single-mode approximation. From these expressions, it is shown that the effective permittivity and permeability take purely real values when the truncation plane of the photonic crystal contains an inversion center of the infinite crystal. In addition, these effective parameters are demonstrated to be continuous and bounded when the crystal mode turns from propagating to evanescent only if the eigenmode fields fulfill specific symmetry conditions. Finally, the validity of the single-mode approximation and the effective-medium model of photonic crystals is investigated. In particular, arguments suggesting that this model fails for bands exhibiting negative refraction are presented.}
+}
+@article{petschulat2008multipole,
+  title={Multipole approach to metamaterials},
+  author={Petschulat, Joerg and Menzel, C and Chipouline, A and Rockstuhl, C and T{\"u}nnermann, A and Lederer, F and Pertsch, T},
+  journal={Physical Review A},
+  volume={78},
+  number={4},
+  pages={043811},
+  year={2008},
+  publisher={APS},
+  abstract={An analytical description for plane-wave propagation in metamaterials is presented. It follows the usual approach for describing light propagation in homogeneous media on the basis of Maxwell’s equations, although applied to a medium composed of metallic nanostructures. Here, as an example, these nanostructures are double (or cut) wires. In the present approach it is assumed that the carriers perform collective oscillations in a single wire. These oscillations are coupled to those in the adjacent wire; thus, the internal carrier dynamics may be described by a coupled-oscillator model. The multipole expansion technique is used to account for the electric and magnetic dipole as well as the electric quadrupole moments of these carrier oscillations within the nanostructure. It turns out that the symmetric normal mode is related to the electric dipole moment whereas the antisymmetric normal mode evokes simultaneously a magnetic dipole and an electric quadrupole moment. It is shown how effective permittivity and permeability can be derived from analytical expressions for the dispersion relation, the magnetization, and the electric displacement field. The results of the analytical model are compared with rigorous simulations of Maxwell’s equations yielding the limitations and the domain of applicability of the proposed model.}
+}
+
 
 % == Other ==
 @article{smolyaninov2011vacuum,
