--- a/intro.tex
+++ b/intro.tex
@@ -6,12 +6,10 @@ The peculiar behaviour of light in periodic structures has attracted human atten
 The scientific community started to rigorously study the underlying phenomena in the late 19th century.
 Simultaneous theoretical and technological progress through the 20th century allowed to design custom structures that interact with electromagnetic waves in a desired way. In analogy with the rapidly growing field of \textit{electronics}, the term of \textit{photonics} was coined for the design of optical fibers and other waveguides, sources, filters, detectors etc. The rapid development in this field was enabled by the modern technology of microfabrication, along with the unprecedented power of computers used for numerical simulations. Nowadays, photonics-based devices play a vital role in the high-bandwidth telecommunication, science and industry.
 
-Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. %% TODO this needs stylistic fixes
 %Electromagnetic phenomena in periodic structures were studied in analogy with the physical theories established previously % outside optics. 
-In the view of author, three independent related paradigms developed, as is described in the historical section: while \textit{photonic crystals} were inspired by the electron waves in crystals, \textit{metamaterials} were inspired by the electromagnetic waves in homogeneous materials. Early treatises of electrodynamics in media with negative or unusual parameters did not assume any structuring or other way of how these parameters should be achieved. On behalf of natural development, the paradigms unified into one, and as such they are elaborated in this thesis. 
+Out of all structures studied in photonics, particularly detailed theoretical studies were devoted to structures that are periodic. Three paradigms related to the physics of periodic structures developed independently. While \textit{photonic crystals} were inspired by the electron waves, \textit{metamaterials} were inspired by the electromagnetic waves in crystals. Early treatises on electrodynamics of \textit{media with negative or unusual parameters} did not assume any structuring or other way of how these parameters should be achieved. On behalf of natural development, the paradigms unified into one, and this thesis tries to describe them in an unified manner.  % todo style
 
-The unifying concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure's unit cell. The actual constituent materials can be relatively freely chosen. % This allows one to take into account the technological and economical aspects. 
-While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials. 
+The essential concept is that the electromagnetic properties of a periodic structure can be, at least partially, understood as those of a homogeneous medium, but in fact they are determined predominantly by the spatial arrangement of the structure's unit cell. The actual constituent materials can be relatively freely chosen. While it is unlikely that a radically new homogeneous material will be invented for construction of optical elements, periodic structuring of ordinary materials provides unprecedented freedom in tuning the electromagnetic properties and even enables to obtain phenomena unusual in homogeneous materials.  % todo style
 
 %}}}
 \section{Motivation for terahertz photonics} %{{{
